{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 166,
  "lineage": "9a036837-ac6a-106c-879c-2862e783f662",
  "resources": [
    {
      "module": "module.dr[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dr_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:344837150589:security-group/sg-064c26574bf001e7e",
            "description": "Security group for RDS instance in DR region",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064c26574bf001e7e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-049d8950d5d5a7203"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dev-dr-bmdb-rds-sg",
            "name_prefix": "",
            "owner_id": "344837150589",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev-dr",
              "Name": "dev-dr-bmdb-rds-sg"
            },
            "tags_all": {
              "Environment": "dev-dr",
              "Name": "dev-dr-bmdb-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-090fe661bb4ace6b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr.module.ecs.aws_security_group.ecs_tasks",
            "module.dr.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dr[0].module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:344837150589:loadbalancer/app/dev-dr-bmdb-alb/5b49ef80a46d522a",
            "arn_suffix": "app/dev-dr-bmdb-alb/5b49ef80a46d522a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-dr-bmdb-alb-847909329.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:344837150589:loadbalancer/app/dev-dr-bmdb-alb/5b49ef80a46d522a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-dr-bmdb-alb",
            "preserve_host_header": false,
            "region": "eu-central-1",
            "security_groups": [
              "sg-0cfa67809b1d76a66"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04ee56da4012d173b"
              },
              {
                "subnet_id": "subnet-09a8fcd97a7d6bada"
              }
            ],
            "subnets": [
              "subnet-04ee56da4012d173b",
              "subnet-09a8fcd97a7d6bada"
            ],
            "tags": {
              "Environment": "dev-dr",
              "Name": "dev-dr-bmdb-alb"
            },
            "tags_all": {
              "Environment": "dev-dr",
              "Name": "dev-dr-bmdb-alb"
            },
            "vpc_id": "vpc-090fe661bb4ace6b6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:344837150589:loadbalancer/app/dev-dr-bmdb-alb/5b49ef80a46d522a"
          },
          "dependencies": [
            "module.dr.module.ecs.aws_security_group.alb",
            "module.dr.module.vpc.aws_subnet.public",
            "module.dr.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dr[0].module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:344837150589:listener/app/dev-dr-bmdb-alb/5b49ef80a46d522a/beb0ac9c77bed20a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:344837150589:targetgroup/dev-dr-bmdb-tg/34b8a6f97708ed11",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:344837150589:listener/app/dev-dr-bmdb-alb/5b49ef80a46d522a/beb0ac9c77bed20a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:344837150589:loadbalancer/app/dev-dr-bmdb-alb/5b49ef80a46d522a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-central-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr.module.ecs.aws_lb.main",
            "module.dr.module.ecs.aws_lb_target_group.app",
            "module.dr.module.ecs.aws_security_group.alb",
            "module.dr.module.vpc.aws_subnet.public",
            "module.dr.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dr[0].module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:344837150589:targetgroup/dev-dr-bmdb-tg/34b8a6f97708ed11",
            "arn_suffix": "targetgroup/dev-dr-bmdb-tg/34b8a6f97708ed11",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:344837150589:targetgroup/dev-dr-bmdb-tg/34b8a6f97708ed11",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:344837150589:loadbalancer/app/dev-dr-bmdb-alb/5b49ef80a46d522a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-dr-bmdb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-central-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev-dr",
              "Name": "dev-dr-bmdb-tg"
            },
            "tags_all": {
              "Environment": "dev-dr",
              "Name": "dev-dr-bmdb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-090fe661bb4ace6b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dr[0].module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:344837150589:security-group/sg-0cfa67809b1d76a66",
            "description": "Controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cfa67809b1d76a66",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-dr-bmdb-alb-sg",
            "name_prefix": "",
            "owner_id": "344837150589",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev-dr",
              "Name": "dev-dr-bmdb-alb-sg"
            },
            "tags_all": {
              "Environment": "dev-dr",
              "Name": "dev-dr-bmdb-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-090fe661bb4ace6b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dr[0].module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:344837150589:security-group/sg-049d8950d5d5a7203",
            "description": "Allow inbound traffic to ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049d8950d5d5a7203",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-dr-bmdb-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "344837150589",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev-dr",
              "Name": "dev-dr-bmdb-ecs-tasks-sg"
            },
            "tags_all": {
              "Environment": "dev-dr",
              "Name": "dev-dr-bmdb-ecs-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-090fe661bb4ace6b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dr[0].module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08100364524d3f907",
            "arn": "arn:aws:ec2:eu-central-1:344837150589:elastic-ip/eipalloc-08100364524d3f907",
            "association_id": "eipassoc-0a5d3e277b02f1573",
            "domain": "vpc",
            "id": "eipalloc-08100364524d3f907",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-06e11bb3fd4b199f4",
            "private_dns": "ip-10-1-3-92.eu-central-1.compute.internal",
            "private_ip": "10.1.3.92",
            "public_dns": "ec2-3-77-231-221.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.77.231.221",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev-dr",
              "Name": "dev-dr-nat-eip"
            },
            "tags_all": {
              "Environment": "dev-dr",
              "Name": "dev-dr-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.dr[0].module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:344837150589:internet-gateway/igw-05e698a9a9a638091",
            "id": "igw-05e698a9a9a638091",
            "owner_id": "344837150589",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev-dr",
              "Name": "dev-dr-igw"
            },
            "tags_all": {
              "Environment": "dev-dr",
              "Name": "dev-dr-igw"
            },
            "vpc_id": "vpc-090fe661bb4ace6b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dr[0].module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08100364524d3f907",
            "association_id": "eipassoc-0a5d3e277b02f1573",
            "connectivity_type": "public",
            "id": "nat-0d46fd6ea7ae196f8",
            "network_interface_id": "eni-06e11bb3fd4b199f4",
            "private_ip": "10.1.3.92",
            "public_ip": "3.77.231.221",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09a8fcd97a7d6bada",
            "tags": {
              "Environment": "dev-dr",
              "Name": "dev-dr-nat-gateway"
            },
            "tags_all": {
              "Environment": "dev-dr",
              "Name": "dev-dr-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr.module.vpc.aws_eip.nat",
            "module.dr.module.vpc.aws_internet_gateway.main",
            "module.dr.module.vpc.aws_subnet.public",
            "module.dr.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dr[0].module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00dbc7975f972e6b61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d46fd6ea7ae196f8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-00dbc7975f972e6b6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr.module.vpc.aws_eip.nat",
            "module.dr.module.vpc.aws_internet_gateway.main",
            "module.dr.module.vpc.aws_nat_gateway.main",
            "module.dr.module.vpc.aws_route_table.private",
            "module.dr.module.vpc.aws_subnet.public",
            "module.dr.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dr[0].module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05e698a9a9a638091",
            "id": "r-rtb-0f349434557c6b3411080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-0f349434557c6b341",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr.module.vpc.aws_internet_gateway.main",
            "module.dr.module.vpc.aws_route_table.public",
            "module.dr.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dr[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:344837150589:route-table/rtb-00dbc7975f972e6b6",
            "id": "rtb-00dbc7975f972e6b6",
            "owner_id": "344837150589",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d46fd6ea7ae196f8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev-dr",
              "Name": "dev-dr-private-route-table"
            },
            "tags_all": {
              "Environment": "dev-dr",
              "Name": "dev-dr-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-090fe661bb4ace6b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dr[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:344837150589:route-table/rtb-0f349434557c6b341",
            "id": "rtb-0f349434557c6b341",
            "owner_id": "344837150589",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e698a9a9a638091",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev-dr",
              "Name": "dev-dr-public-route-table"
            },
            "tags_all": {
              "Environment": "dev-dr",
              "Name": "dev-dr-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-090fe661bb4ace6b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dr[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db72456adf2dcd59",
            "region": "eu-central-1",
            "route_table_id": "rtb-00dbc7975f972e6b6",
            "subnet_id": "subnet-0c4cfcf93dc943a04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr.module.vpc.aws_route_table.private",
            "module.dr.module.vpc.aws_subnet.private",
            "module.dr.module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0623a94cd5cd4b667",
            "region": "eu-central-1",
            "route_table_id": "rtb-00dbc7975f972e6b6",
            "subnet_id": "subnet-037d11e103b37fc62"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr.module.vpc.aws_route_table.private",
            "module.dr.module.vpc.aws_subnet.private",
            "module.dr.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dr[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06239396b0bb1ed8c",
            "region": "eu-central-1",
            "route_table_id": "rtb-0f349434557c6b341",
            "subnet_id": "subnet-09a8fcd97a7d6bada"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr.module.vpc.aws_route_table.public",
            "module.dr.module.vpc.aws_subnet.public",
            "module.dr.module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f80d19570e0a272f",
            "region": "eu-central-1",
            "route_table_id": "rtb-0f349434557c6b341",
            "subnet_id": "subnet-04ee56da4012d173b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr.module.vpc.aws_route_table.public",
            "module.dr.module.vpc.aws_subnet.public",
            "module.dr.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dr[0].module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:344837150589:subnet/subnet-0c4cfcf93dc943a04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4cfcf93dc943a04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344837150589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev-dr",
              "Name": "dev-dr-private-subnet-1"
            },
            "tags_all": {
              "Environment": "dev-dr",
              "Name": "dev-dr-private-subnet-1"
            },
            "vpc_id": "vpc-090fe661bb4ace6b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr.module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:344837150589:subnet/subnet-037d11e103b37fc62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037d11e103b37fc62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344837150589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev-dr",
              "Name": "dev-dr-private-subnet-2"
            },
            "tags_all": {
              "Environment": "dev-dr",
              "Name": "dev-dr-private-subnet-2"
            },
            "vpc_id": "vpc-090fe661bb4ace6b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dr[0].module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:344837150589:subnet/subnet-09a8fcd97a7d6bada",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a8fcd97a7d6bada",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "344837150589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev-dr",
              "Name": "dev-dr-public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev-dr",
              "Name": "dev-dr-public-subnet-1"
            },
            "vpc_id": "vpc-090fe661bb4ace6b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr.module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:344837150589:subnet/subnet-04ee56da4012d173b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ee56da4012d173b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "344837150589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev-dr",
              "Name": "dev-dr-public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev-dr",
              "Name": "dev-dr-public-subnet-2"
            },
            "vpc_id": "vpc-090fe661bb4ace6b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dr[0].module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:344837150589:vpc/vpc-090fe661bb4ace6b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-07964506a6a1c9c11",
            "default_route_table_id": "rtb-058df79d10b4bfe81",
            "default_security_group_id": "sg-0fb030aaa0b760c7f",
            "dhcp_options_id": "dopt-08f5f81d64f05e9dc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-090fe661bb4ace6b6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-058df79d10b4bfe81",
            "owner_id": "344837150589",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev-dr",
              "Name": "dev-dr-vpc"
            },
            "tags_all": {
              "Environment": "dev-dr",
              "Name": "dev-dr-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:344837150589:loadbalancer/app/dev-bmdb-alb/55d1d669d2d057cd",
            "arn_suffix": "app/dev-bmdb-alb/55d1d669d2d057cd",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-bmdb-alb-892433537.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:344837150589:loadbalancer/app/dev-bmdb-alb/55d1d669d2d057cd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-bmdb-alb",
            "preserve_host_header": false,
            "region": "eu-west-1",
            "security_groups": [
              "sg-040fd7dbbfec31b21"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01732956d6a27c95a"
              },
              {
                "subnet_id": "subnet-09147832b53383bc7"
              },
              {
                "subnet_id": "subnet-0d8f7ae568911a19e"
              }
            ],
            "subnets": [
              "subnet-01732956d6a27c95a",
              "subnet-09147832b53383bc7",
              "subnet-0d8f7ae568911a19e"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-bmdb-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-bmdb-alb"
            },
            "vpc_id": "vpc-0de36293635ba91ae",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:344837150589:loadbalancer/app/dev-bmdb-alb/55d1d669d2d057cd"
          },
          "dependencies": [
            "module.ecs.aws_security_group.alb",
            "module.rds.aws_db_instance.main",
            "module.rds.aws_db_subnet_group.main",
            "module.rds.aws_secretsmanager_secret_version.update_db_host",
            "module.rds.aws_security_group.rds",
            "module.secrets.aws_secretsmanager_secret.database_credentials",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:344837150589:listener/app/dev-bmdb-alb/55d1d669d2d057cd/fdc05071718e1b6b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:344837150589:targetgroup/dev-bmdb-tg/657babdaa972e15c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:344837150589:listener/app/dev-bmdb-alb/55d1d669d2d057cd/fdc05071718e1b6b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:344837150589:loadbalancer/app/dev-bmdb-alb/55d1d669d2d057cd",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_target_group.app",
            "module.ecs.aws_security_group.alb",
            "module.rds.aws_db_instance.main",
            "module.rds.aws_db_subnet_group.main",
            "module.rds.aws_secretsmanager_secret_version.update_db_host",
            "module.rds.aws_security_group.rds",
            "module.secrets.aws_secretsmanager_secret.database_credentials",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:344837150589:targetgroup/dev-bmdb-tg/657babdaa972e15c",
            "arn_suffix": "targetgroup/dev-bmdb-tg/657babdaa972e15c",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:344837150589:targetgroup/dev-bmdb-tg/657babdaa972e15c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:344837150589:loadbalancer/app/dev-bmdb-alb/55d1d669d2d057cd"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-bmdb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-bmdb-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-bmdb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0de36293635ba91ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rds.aws_db_instance.main",
            "module.rds.aws_db_subnet_group.main",
            "module.rds.aws_secretsmanager_secret_version.update_db_host",
            "module.rds.aws_security_group.rds",
            "module.secrets.aws_secretsmanager_secret.database_credentials",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:344837150589:security-group/sg-040fd7dbbfec31b21",
            "description": "Controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040fd7dbbfec31b21",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-bmdb-alb-sg",
            "name_prefix": "",
            "owner_id": "344837150589",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-bmdb-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-bmdb-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de36293635ba91ae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.rds.aws_db_instance.main",
            "module.rds.aws_db_subnet_group.main",
            "module.rds.aws_secretsmanager_secret_version.update_db_host",
            "module.rds.aws_security_group.rds",
            "module.secrets.aws_secretsmanager_secret.database_credentials",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:344837150589:security-group/sg-0eda85bbba9b5c2fd",
            "description": "Allow inbound traffic to ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eda85bbba9b5c2fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-bmdb-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "344837150589",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-bmdb-ecs-tasks-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-bmdb-ecs-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de36293635ba91ae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.rds.aws_db_instance.main",
            "module.rds.aws_db_subnet_group.main",
            "module.rds.aws_secretsmanager_secret_version.update_db_host",
            "module.rds.aws_security_group.rds",
            "module.secrets.aws_secretsmanager_secret.database_credentials",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:344837150589:security-group/sg-0541b3d1b4b827b69",
            "description": "Allow database traffic from ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0541b3d1b4b827b69",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "MySQL from private subnets",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dev-bmdb-rds-sg",
            "name_prefix": "",
            "owner_id": "344837150589",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-bmdb-rds-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-bmdb-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de36293635ba91ae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a71b2c33969ecbf6",
            "arn": "arn:aws:ec2:eu-west-1:344837150589:elastic-ip/eipalloc-0a71b2c33969ecbf6",
            "association_id": "eipassoc-0cfb59e4486e8bb94",
            "domain": "vpc",
            "id": "eipalloc-0a71b2c33969ecbf6",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0027fc41dd9d1497a",
            "private_dns": "ip-10-0-101-147.eu-west-1.compute.internal",
            "private_ip": "10.0.101.147",
            "public_dns": "ec2-34-240-127-39.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.240.127.39",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:344837150589:internet-gateway/igw-0733d0c33a70fdb1e",
            "id": "igw-0733d0c33a70fdb1e",
            "owner_id": "344837150589",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0de36293635ba91ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a71b2c33969ecbf6",
            "association_id": "eipassoc-0cfb59e4486e8bb94",
            "connectivity_type": "public",
            "id": "nat-06b33249319cea89b",
            "network_interface_id": "eni-0027fc41dd9d1497a",
            "private_ip": "10.0.101.147",
            "public_ip": "34.240.127.39",
            "region": "eu-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d8f7ae568911a19e",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat-gateway"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cee17bd3b581d1831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06b33249319cea89b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-1",
            "route_table_id": "rtb-0cee17bd3b581d183",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0733d0c33a70fdb1e",
            "id": "r-rtb-0ab60255156bc80751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-1",
            "route_table_id": "rtb-0ab60255156bc8075",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:344837150589:route-table/rtb-0cee17bd3b581d183",
            "id": "rtb-0cee17bd3b581d183",
            "owner_id": "344837150589",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06b33249319cea89b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-route-table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de36293635ba91ae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:344837150589:route-table/rtb-0ab60255156bc8075",
            "id": "rtb-0ab60255156bc8075",
            "owner_id": "344837150589",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0733d0c33a70fdb1e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-route-table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de36293635ba91ae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fce6ca4a8b879518",
            "region": "eu-west-1",
            "route_table_id": "rtb-0cee17bd3b581d183",
            "subnet_id": "subnet-0c64808563b983d44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067ea35f891de790e",
            "region": "eu-west-1",
            "route_table_id": "rtb-0cee17bd3b581d183",
            "subnet_id": "subnet-0239c15b9fbe9be83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00de1eca13c8e7c9f",
            "region": "eu-west-1",
            "route_table_id": "rtb-0cee17bd3b581d183",
            "subnet_id": "subnet-0f7101e329271d203"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042c7357445bd9559",
            "region": "eu-west-1",
            "route_table_id": "rtb-0ab60255156bc8075",
            "subnet_id": "subnet-0d8f7ae568911a19e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d26fdf6115008b53",
            "region": "eu-west-1",
            "route_table_id": "rtb-0ab60255156bc8075",
            "subnet_id": "subnet-09147832b53383bc7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0781002fb3821d858",
            "region": "eu-west-1",
            "route_table_id": "rtb-0ab60255156bc8075",
            "subnet_id": "subnet-01732956d6a27c95a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:344837150589:subnet/subnet-0c64808563b983d44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c64808563b983d44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344837150589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-subnet-1"
            },
            "vpc_id": "vpc-0de36293635ba91ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:344837150589:subnet/subnet-0239c15b9fbe9be83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0239c15b9fbe9be83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344837150589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-subnet-2"
            },
            "vpc_id": "vpc-0de36293635ba91ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:344837150589:subnet/subnet-0f7101e329271d203",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7101e329271d203",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344837150589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-subnet-3"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-subnet-3"
            },
            "vpc_id": "vpc-0de36293635ba91ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:344837150589:subnet/subnet-0d8f7ae568911a19e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8f7ae568911a19e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "344837150589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-subnet-1"
            },
            "vpc_id": "vpc-0de36293635ba91ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:344837150589:subnet/subnet-09147832b53383bc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09147832b53383bc7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "344837150589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-subnet-2"
            },
            "vpc_id": "vpc-0de36293635ba91ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:344837150589:subnet/subnet-01732956d6a27c95a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01732956d6a27c95a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "344837150589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-subnet-3"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-subnet-3"
            },
            "vpc_id": "vpc-0de36293635ba91ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:344837150589:vpc/vpc-0de36293635ba91ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-098f5889137ab12a0",
            "default_route_table_id": "rtb-0a501da88b9f6303e",
            "default_security_group_id": "sg-07daaa39ae8b171d1",
            "dhcp_options_id": "dopt-0fd1ace7285feca48",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0de36293635ba91ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a501da88b9f6303e",
            "owner_id": "344837150589",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}